[tool.poetry]
name = "PrimeTest"
version = "0.1.0"
description = "This is a simple code building project for a python app to test a range of numbers for the presence of primes."
authors = ["Jonathan Fierstein <jonathan.fierstein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
